race buttons look decent

--- a/ChachaT/Filtering.storyboard
+++ b/ChachaT/Filtering.storyboard
@@ -24,19 +24,19 @@
                                         <rect key="frame" x="0.0" y="0.0" width="375" height="542"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Filters" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lLm-mr-Qho">
-                                                <rect key="frame" x="155" y="0.0" width="64.5" height="29"/>
+                                                <rect key="frame" x="155" y="5" width="64.5" height="29"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="24"/>
                                                 <color key="textColor" red="0.0039215686269999999" green="0.76470588240000004" blue="0.65490196079999996" alpha="1" colorSpace="calibratedRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Race:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2lc-Eu-bhG">
-                                                <rect key="frame" x="20" y="29" width="37" height="17"/>
+                                                <rect key="frame" x="20" y="34" width="37" height="17"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <color key="textColor" red="0.0039215686269999999" green="0.76470588240000004" blue="0.65490196079999996" alpha="1" colorSpace="calibratedRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="2" translatesAutoresizingMaskIntoConstraints="NO" id="hWU-04-v3b">
-                                                <rect key="frame" x="20" y="60" width="335" height="40"/>
+                                                <rect key="frame" x="20" y="56" width="335" height="40"/>
                                                 <subviews>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="B9v-iH-Eoh">
                                                         <rect key="frame" x="0.0" y="0.0" width="66" height="40"/>
@@ -68,7 +68,7 @@
                                                     </button>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rtt-1Q-Gbr">
                                                         <rect key="frame" x="270" y="0.0" width="66" height="40"/>
-                                                        <color key="backgroundColor" red="0.0039215686269999999" green="0.76470588240000004" blue="0.65490196079999996" alpha="0.29999999999999999" colorSpace="calibratedRGB"/>
+                                                        <color key="backgroundColor" red="0.0039215686269999999" green="0.76470588240000004" blue="0.65490196079999996" alpha="1" colorSpace="calibratedRGB"/>
                                                         <state key="normal" title="All">
                                                             <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                                         </state>
@@ -83,9 +83,9 @@
                                         <constraints>
                                             <constraint firstAttribute="trailing" secondItem="hWU-04-v3b" secondAttribute="trailing" constant="20" id="0M1-8w-hta"/>
                                             <constraint firstItem="lLm-mr-Qho" firstAttribute="centerX" secondItem="g5Y-6u-2zd" secondAttribute="centerX" id="82b-jV-N7t"/>
-                                            <constraint firstItem="lLm-mr-Qho" firstAttribute="top" secondItem="g5Y-6u-2zd" secondAttribute="top" id="Mg4-qs-s1D"/>
+                                            <constraint firstItem="lLm-mr-Qho" firstAttribute="top" secondItem="g5Y-6u-2zd" secondAttribute="top" constant="5" id="Mg4-qs-s1D"/>
                                             <constraint firstItem="2lc-Eu-bhG" firstAttribute="top" secondItem="lLm-mr-Qho" secondAttribute="bottom" id="SFe-OD-ipH"/>
-                                            <constraint firstItem="hWU-04-v3b" firstAttribute="top" secondItem="2lc-Eu-bhG" secondAttribute="bottom" constant="14" id="SGD-bO-29E"/>
+                                            <constraint firstItem="hWU-04-v3b" firstAttribute="top" secondItem="2lc-Eu-bhG" secondAttribute="bottom" constant="5" id="SGD-bO-29E"/>
                                             <constraint firstItem="2lc-Eu-bhG" firstAttribute="leading" secondItem="g5Y-6u-2zd" secondAttribute="leading" constant="20" id="kkw-qm-CU2"/>
                                             <constraint firstItem="hWU-04-v3b" firstAttribute="leading" secondItem="g5Y-6u-2zd" secondAttribute="leading" constant="20" id="odY-eK-Ykr"/>
                                         </constraints>
@@ -118,10 +118,12 @@
                     </view>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                     <connections>
+                        <outlet property="theContentView" destination="g5Y-6u-2zd" id="geU-vl-4Ef"/>
                         <outlet property="theRaceAllButton" destination="rtt-1Q-Gbr" id="l9T-3N-jsC"/>
                         <outlet property="theRaceAsianButton" destination="B9v-iH-Eoh" id="pVg-vr-9HX"/>
                         <outlet property="theRaceBlackButton" destination="KnV-zn-ucp" id="38g-ZY-4Xa"/>
                         <outlet property="theRaceLatinoButton" destination="nC9-6c-8Yq" id="FFu-Jt-zeS"/>
+                        <outlet property="theRaceStackView" destination="hWU-04-v3b" id="Izc-y1-IGo"/>
                         <outlet property="theRaceWhiteButton" destination="Vwi-jJ-qZm" id="YNx-W2-x7v"/>
                     </connections>
                 </viewController>
